Implementation Google Sign In Method
Implementada con éxito el inicio de sesión con cuenta de Google.

--- a/Beerute_Login04/app/src/main/res/values/strings.xml
+++ b/Beerute_Login04/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Beerute_Login04</string>
+    <string name="prefs_file">com.example.beerute_login04.PREFERENCE_FILE_KEY</string>
 </resources>
