--- a/Beerute_F01/app/src/main/res/values/strings.xml
+++ b/Beerute_F01/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Beerute_F01</string>
+    <string name="app_name">BeeRute</string>
     <string name="prefs_file">com.example.beerute_f01.PREFERENCE_FILE_KEY</string>
 </resources>
