--- a/Beerute_F01/app/src/main/res/values/strings.xml
+++ b/Beerute_F01/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">BeeRute</string>
     <string name="prefs_file">com.example.beerute_f01.PREFERENCE_FILE_KEY</string>
+
+    <string name="start_record">Start Record</string>
+    <string name="stop_record">Stop Record</string>
+    <string name="restart_record">Restart Record</string>
+
 </resources>
